rhai/codegen/ui_tests/export_mod_bad_value.stderr
error: expecting string literal
  --> $DIR/export_mod_bad_value.rs:11:18
   |
11 | #[rhai_fn(name = true)]
   |                  ^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `test_mod`
  --> $DIR/export_mod_bad_value.rs:22:8
   |
22 |     if test_mod::test_fn(n) {
   |        ^^^^^^^^ use of undeclared crate or module `test_mod`
